	PR ld/12066 	* ldexp.c (fold_name): Treat absolute symbols as plain numbers. 	* ld.texinfo (Expression Section): Don't say absolute symbols 	are addresses.